--- a/InventoryManagement/MainWindow.xaml
+++ b/InventoryManagement/MainWindow.xaml
@@ -4,9 +4,20 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InventoryManagement"
-        mc:Ignorable="d"
+        mc:Ignorable="d" WindowStartupLocation="CenterScreen"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <Menu>
+            <MenuItem Header="_File">
+                <MenuItem Header="_Add..."/>
+                <MenuItem Header="_Edit..."/>
+                <MenuItem Header="_Delete..."/>
+                <MenuItem Header="_Clear"/>
+                <MenuItem Header="_Quit"/>
+            </MenuItem>
+            <MenuItem Header="_Help">
+                <MenuItem Header="_About"/>
+            </MenuItem>
+        </Menu>
     </Grid>
 </Window>
