--- a/InventoryManagement/MainWindow.xaml
+++ b/InventoryManagement/MainWindow.xaml
@@ -37,7 +37,7 @@
                 <MenuItem Header="Deutsch" Command="SpecialClass:CustomCommands.German"/>
             </MenuItem>
             <MenuItem Header="{DynamicResource MainWindow.Menu.Help}">
-                <MenuItem Header="{DynamicResource MainWindow.Menu.Help.About}"/>
+                <MenuItem Header="{DynamicResource MainWindow.Menu.Help.About}" Click="MenuItem_Click"/>
             </MenuItem>
         </Menu>
         <StatusBar DockPanel.Dock="Bottom" VerticalAlignment="Bottom" Background="LightBlue">
@@ -143,8 +143,8 @@
                         </Style>
                     </TextBlock.Style>
                 </TextBlock>
-                <Button Grid.Column="2" Name="TestBtn" Content="Add 100 Inventories" Click="TestBtn_Click"/>
-                <Button Grid.Column="2" Grid.Row="1" Name="LoadData" Content="Reload" Click="LoadData_Click"/>
+                <!--<Button Grid.Column="2" Name="TestBtn" Content="Add 100 Inventories" Click="TestBtn_Click"/>
+                <Button Grid.Column="2" Grid.Row="1" Name="LoadData" Content="Reload" Click="LoadData_Click"/>-->
             </Grid>
         </StackPanel>
     </DockPanel>
