--- a/InventoryManagement/MainWindow.xaml
+++ b/InventoryManagement/MainWindow.xaml
@@ -42,12 +42,26 @@
                 <MenuItem Header="Deutsch" Command="SpecialClass:CustomCommands.German"/>
             </MenuItem>
             <MenuItem Header="{DynamicResource MainWindow.Menu.Help}">
-                <MenuItem Header="{DynamicResource MainWindow.Menu.Help.About}" Click="MenuItem_Click"/>
+                <MenuItem Header="{DynamicResource MainWindow.Menu.Help.About}" Click="About_Click"/>
+                <MenuItem Header="{DynamicResource MainWindow.Menu.Help.About}" Click="ResetDb_Click"/>
             </MenuItem>
         </Menu>
         <StatusBar DockPanel.Dock="Bottom" VerticalAlignment="Bottom" Background="LightBlue">
+            <StatusBarItem>
+                <StatusBarItem.Style>
+                    <Style TargetType="StatusBarItem">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding Status}" Value="Processing...">
+                                <Setter Property="Content" Value="{DynamicResource MainWindow.StatusBar.Status.Processing}"/>
+                            </DataTrigger>
+                        <DataTrigger Binding="{Binding Status}" Value="Finished">
+                                <Setter Property="Content" Value="{DynamicResource MainWindow.StatusBar.Status.Finished}"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </StatusBarItem.Style>
+            </StatusBarItem>
             <Separator/>
-            <StatusBarItem Content="{Binding Status}"/>
             <Grid>
                 <ProgressBar Minimum="0" Maximum="100" Height="15" Width="200" Value="{Binding Progress}"/>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
@@ -160,8 +174,8 @@
                         </Style>
                     </TextBlock.Style>
                 </TextBlock>
-                <!--<Button Grid.Column="2" Name="TestBtn" Content="Add 100 Inventories" Click="TestBtn_Click"/>
-                <Button Grid.Column="2" Grid.Row="1" Name="LoadData" Content="Reload" Click="LoadData_Click"/>-->
+                <Button Grid.Column="2" Name="TestBtn" Content="Add 100 Inventories" Click="TestBtn_Click"/>
+                <Button Grid.Column="2" Grid.Row="1" Name="LoadData" Content="Reload" Click="LoadData_Click"/>
             </Grid>
         </StackPanel>
     </DockPanel>
