--- a/InventoryManagement/Resources/Resources.de.xaml
+++ b/InventoryManagement/Resources/Resources.de.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:system="clr-namespace:System;assembly=System.Runtime"
-                    xmlns:local="clr-namespace:InventoryManagement.Resources">
+                    xmlns:system="clr-namespace:System;assembly=System.Runtime">
     <!--#region Title -->
     <system:String x:Key="MainWindow.Title">Bestandsverwaltung</system:String>
     <!--#endregion-->
@@ -17,5 +16,10 @@
     <!--#region Menu.Help-->
     <system:String x:Key="MainWindow.Menu.Help">_Hilfe</system:String>
     <system:String x:Key="MainWindow.Menu.Help.About">Über _uns</system:String>
+    <!--#endregion-->
+
+    <!--#region StatusBar -->
+    <system:String x:Key="MainWindow.StatusBar.Status.Processing">In progress...</system:String>
+    <system:String x:Key="MainWindow.StatusBar.Status.Finished">Fertig</system:String>
     <!--#endregion-->
 </ResourceDictionary>
